# rust_task_tracker

./: .dockerignore  .env.example  .env.test  .gitignore  Cargo.toml  Dockerfile.dev  Dockerfile.prod  LICENSE  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml
migrations/: init.sql
migrations/2022-05-01-133226_init/: down.sql  up.sql
migrations/2024-09-06_create-users/: down.sql  up.sql
migrations/2024-09-09-112133_change_task_id_to_uuid/: down.sql  up.sql
migrations/2024-09-23-174034_add_user_id_to_tasks/: down.sql  up.sql
migrations/2024-09-24-075352_add_user_id_to_tasks/: up.sql
nginx/: nginx.dev.conf  nginx.prod.conf
request_file/users/: user_config.json  user_login_post_superadmin_body.json  user_register_post_superadmin_body.json
src/: lib.rs  main.rs
src/adapters/api/: mod.rs
src/adapters/api/cat_facts/: cat_facts_controllers.rs  cat_facts_payloads.rs
src/adapters/api/cat_tacts/: cat_facts_mappers.rs
src/adapters/api/dog_facts/: dog_facts_controllers.rs  dog_facts_payloads.rs
src/adapters/api/shared/: app_state.rs  error_presenter.rs  mod.rs  routes.rs  success_presenter.rs
src/adapters/api/tasks/: mod.rs  tasks_controllers.rs  tasks_mappers.rs  tasks_payloads.rs  tasks_presenters.rs
src/adapters/api/users/: mod.rs  users_mappers.rs  (+3 more)
src/adapters/spi/: mod.rs
src/application/mappers/: api_mapper.rs
src/application/repositories/: cat_facts_repository_abstract.rs  dog_facts_repository_abstract.rs  mod.rs  tasks_repository_abstract.rs  users_repository_abstract.rs
src/application/usecases/: delete_one_task_by_id_usecase.rs  get_all_tasks_usecase.rs  get_one_task_by_id_usecase.rs  interfaces.rs  mod.rs  post_one_cat_fact_usecase.rs  post_one_dog_fact_usecase.rs  post_one_task_usecase.rs  update_one_task_usecase.rs
src/application/utils/: mod.rs  types.rs  validate_params.rs
src/domain/: mod.rs  task_entity.rs  user_entity.rs
src/infrastructure/: env_source.rs  mod.rs
tests/integration_tests/: mod.rs  test_cat_facts.rs  test_dog_facts.rs  test_tasks.rs
tests/integration_tests/fixtures/: cat_facts.json  fixtures_run.rs  fixtures_struct.rs  tasks.json
tests/utils/: test_context.rs  utils_setup.rs
(+39 files in other folders)
