[package]
authors = ["Irmansyah <irmansyahproject@gmail.com>"]
name = "tasktracker_backend"
version = "0.1.0"
license = "Apache-2.0/MIT"
edition = "2021"

[[bin]]
name = "tasktracker_backend"
path = "src/main.rs"

[lib]
name = "tasktracker_backend"
path = "src/lib.rs"

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
actix-rt = "2.10"
actix-http = "3.8"
log = "0.4.22"
env_logger = "0.11"
failure = "0.1"
serde = "1.0"
serde_json = "1.0"
async-trait = "0.1"
diesel = { version = "2.2", features = ["postgres", "r2d2"] }
diesel_migrations = "2.2"
dotenv = "0.15"
r2d2 = "0.8"
tokio = { version = "1.38", features = ["full"] }
thiserror = "1.0"
derive_more = "0.99"
reqwest={ version="0.12", features = ["json"] }
# uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
jsonwebtoken = "9.3"
bcrypt = "0.15"
uuid = "1.10"

[dev-dependencies]
cargo-tarpaulin = "0.30"
# uuid = { version = "1.10", features = ["serde", "v4"] }
mockall = "0.12"
